# simple-ai

./: .gitignore  README.md  main.ipynb  pyproject.toml
